fix: z-index for tooltip and modal

--- a/src/scss/settings/_z-index.scss
+++ b/src/scss/settings/_z-index.scss
@@ -1,6 +1,6 @@
 $z-index-notification: 300;
-$z-index-tooltip: 200;
-$z-index-modal: 100;
+$z-index-modal: 200;
+$z-index-tooltip: 100;
 $z-index-level-1: 10;
 $z-index-level-2: 20;
 $z-index-level-3: 30;
